--- a/storm_web/index_tbd.html
+++ b/storm_web/index_tbd.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
   <head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
    <style>
     ul 
     </style>
@@ -12,8 +13,9 @@
 
 <body>    
 
-  <h1>Navigation Page</h1>
-   <ul style="list-style-type:disc">
+  <h1>Ryan Cenicola's Homepage</h1>
+   <ul style="list-style-type:block">
+   <li> <a class="active" href="index_tbd.html">Home</a></li>
     <li> <a href="iml300/index.html"> About </a> </li>
     <li><a href="iml300/assignments/links.html">Links</a></li>
     <li><a href="iml300/assignments/"</a>Assignments</li>
