--- a/storm_web/index_tbd.html
+++ b/storm_web/index_tbd.html
@@ -16,11 +16,14 @@
   <h1>Ryan Cenicola's Homepage</h1>
    <ul style="list-style-type:block">
    <li> <a class="active" href="index_tbd.html">Home</a></li>
-    <li> <a href="iml300/index.html"> About </a> </li>
-    <li><a href="iml300/assignments/links.html">Links</a></li>
-    <li><a href="iml300/assignments/"</a>Assignments</li>
+    <li> <a href="http://storm.usc.edu/~cenicola/iml300/"> About </a> </li>
+    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/links.html">Links</a></li>
+    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/"</a>Assignments</li>
 </ul>
 
+<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+<h2>Let's Go On a Journey</h2>
+<p>"A day without sunshine is like night" - Unknown</p>
 
 </body>
 
