--- a/storm_web/index_tbd.html
+++ b/storm_web/index_tbd.html
@@ -13,18 +13,25 @@
 
 <body>    
 
-  <h1>Ryan Cenicola's Homepage</h1>
+  
    <ul style="list-style-type:block">
    <li> <a class="active" href="index_tbd.html">Home</a></li>
     <li> <a href="http://storm.usc.edu/~cenicola/iml300/"> About </a> </li>
     <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/links.html">Links</a></li>
-    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/"</a>Assignments</li>
+    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/">Assignments</a></li>
 </ul>
+<h1>Ryan Cenicola's Homepage</h1>
 
-<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+
 <h2>Let's Go On a Journey</h2>
 <p>"A day without sunshine is like night" - Unknown</p>
-
+    </div>
+    <audio controls autoplay>
+        <source src="assignments/audio/bensound-sexy.mp3" type="audio/mp3">
+        <!--Source: bensound.com --!>
+        
+    </audio>
+    
 </body>
 
 </html>
