had to make refs consistent

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     </style>
     <meta charset="UTF-8">
     <title>Homepage Navigation</title>  
-    <link rel="stylesheet" href="assignments/css/index_tbd.css">  
+    <link rel="stylesheet" href="iml300/assignments/css/index.css">  
 </head>
 
 <body>    
 
   
    <ul style="list-style-type:block">
-   <li> <a class="active" href="index_tbd.html" style="text-decoration:none">Home</a></li>
+   <li> <a class="active" href="http://storm.usc.edu/~cenicola/" style="text-decoration:none">Home</a></li>
    <!--Wanted to make an "active" tab that highlights the current page the user is on. As directed by http://www.w3schools.com/css/css_navbar.asp. -->
    
     <li> <a href="http://storm.usc.edu/~cenicola/iml300/" style="text-decoration:none"> About </a> </li>
