Re-organization of storm

--- a/storm_web/assignments/index.html
+++ b/storm_web/assignments/index.html
@@ -13,6 +13,7 @@
 <h style="font-family:sans-serif"> My Assignments</h>
   <ul>
       <li> <a href="constitution.html"> Constitution Assignment</a> </li>
+      <li> <a href="week2.html"> The Good, the Bad, and the Ugly</a> </li>
       
       
   </ul>
