--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -8,19 +8,19 @@
     </style>
     <meta charset="UTF-8">
     <title>Homepage Navigation</title>  
-    <link rel="stylesheet" href="assignments/css/index_tbd.css">  
+    <link rel="stylesheet" href="assignments/css/homepage.css" 
 </head>
 
 <body>    
 
   
    <ul style="list-style-type:block">
-   <li> <a class="active" href="index_tbd.html" style="text-decoration:none">Home</a></li>
+   <li> <a class="active" href="http://storm.usc.edu/~cenicola/" style="text-decoration:none">Home</a></li>
    <!--Wanted to make an "active" tab that highlights the current page the user is on. As directed by http://www.w3schools.com/css/css_navbar.asp. -->
    
-    <li> <a href="http://storm.usc.edu/~cenicola/iml300/" style="text-decoration:none"> About </a> </li>
-    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/links.html" style="text-decoration:none">Links</a></li>
-    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/" style="text-decoration:none">Assignments</a></li>
+    <li> <a href="about.html" style="text-decoration:none"> About </a> </li>
+    <li><a href="links.html" style="text-decoration:none">Links</a></li>
+    <li><a href="assignments/index.html" style="text-decoration:none">Assignments</a></li>
 </ul>
 <h1>Ryan Cenicola's Homepage</h1>
 
@@ -31,7 +31,7 @@
     <p>Tunes provided by: bensound.com</p>
     <p>My color #CC0000, or Rosso corsa, has been my favorite color for as long as I can remember. I was really into racecars when I was young, and Rosso corsa is the red used on many racecars, especially in Italy. My car is now red, inspired by the vehicles I followed in my youth. </p>
     <audio controls autoplay>
-        <source src="assignments/audio/bensound-sexy.mp3" type="audio/mp3">
+        <source src="iml300/assignments/audio/bensound-sexy.mp3" type="audio/mp3">
         
         <!--Source: bensound.com. I pulled the preceeding code from:http://www.w3schools.com/tags/att_audio_autoplay.asp. -->
         
