--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -8,7 +8,7 @@
     </style>
     <meta charset="UTF-8">
     <title>Homepage Navigation</title>  
-    <link rel="stylesheet" href="assignments/css/homepage.css" 
+    <link rel="stylesheet" href="css/w3.css"> 
 </head>
 
 <body>    
