got nice background goin

--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -8,7 +8,8 @@
     </style>
     <meta charset="UTF-8">
     <title>Homepage Navigation</title>  
-    <link rel="stylesheet" href="css/w3.css"> 
+    <link rel="stylesheet" href="css/w3.css">
+     <link rel="stylesheet" href="css/custom-w3">  
 </head>
 
 <body>    
@@ -25,7 +26,7 @@
 <h1>Ryan Cenicola's Homepage</h1>
 
 
-<h2>Let's Go On a Journey</h2>
+<h2 class=w3-display-container>Let's Go On a Journey</h2>
 <p>"A day without sunshine is like night" - Unknown</p>
     </div>
     <p>Tunes provided by: bensound.com</p>
