--- a/storm_web/index-2.html
+++ b/storm_web/index-2.html
@@ -2,43 +2,46 @@
 <html lang="en">
 
   <head>
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-   <style>
-    ul 
+<style>
     </style>
     <meta charset="UTF-8">
     <title>Homepage Navigation</title>  
     <link rel="stylesheet" href="css/w3.css">
-     <link rel="stylesheet" href="css/custom-w3">  
+     <link rel="stylesheet" href="css/custom-w3.css"> 
+     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
 
 <body>    
 <!-- Header -->
 <header class="w3-display-container w3-content" style="max-width:1500px">
-  <img class="w3-image" src="home-header.jpg" alt="Me" width="1500" height="600">
+  <img class="w3-image" src="assignments/images/home-header.JPG" alt="Me" width="1500" height="600">
   <div class="w3-display-middle w3-padding-xlarge w3-border w3-wide w3-text-light-grey w3-center">
-    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">JANE DOE</h1>
-    <h5 class="w3-hide-large" style="white-space:nowrap">JANE DOE</h5>
-    <h3 class="w3-hide-medium w3-hide-small">PHOTOGRAPHER</h3>
+    <h1 class="w3-hide-medium w3-hide-small name alltop">RYAN CENICOLA</h1>
+    <h5 class="w3-hide-large alltop" style="white-space:nowrap">RYAN CENICOLA</h5>
+    <h4 class="w3-hide-medium w3-hide-small">UNIVERSITY OF SOUTHERN CALIFORNIA</h4>
   </div>
   
   <!-- Navbar (placed at the bottom of the header image) -->
-  <ul class="w3-navbar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <li><a href="#">Home</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href="#contact">Contact</a></li>
+  <ul class="w3-navbar w3-red w3-round w3-display-bottommiddle w3-hide-small navbar" style="bottom:-16px">
+    <li><a href="#">About Me</a></li>
+    <li><a href="#portfolio">Assignments</a></li>
+    <li><a href="#contact">Top Links</a></li>
   </ul>
 </header>
 
 <!-- Navbar on small screens -->
 <ul class="w3-navbar w3-light-grey w3-hide-large w3-hide-medium">
-  <li><a href="#">Home</a></li>
-  <li><a href="#portfolio">Portfolio</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="#portfolio">Assignments</a></li>
+  <li><a href="#contact">Links</a></li>
 </ul>
 
+<!-- Welcome Phrase -->
+<h3 class="w3-container w3-center intro">Here's what I've been up to:</h3>
+
 <!-- Page content -->
-<div class="w3-content w3-padding-jumbo w3-margin-top" id="portfolio">
+<div class="w3-content w3-row-padding w3-margin-top" id="portfolio">
+  
 
   <!-- Images (Portfolio) -->
   <img src="img_ocean.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
@@ -47,34 +50,10 @@
   <img src="img_mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="img_mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
 
-  <!-- Contact -->
-  <div class="w3-light-grey w3-padding-xlarge w3-padding-32 w3-margin-top" id="contact">
-    <h3 class="w3-center">Contact</h3>
-    <hr>
-    <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
-
-    <form>
-      <div class="w3-group">
-        <label>Name</label>
-        <input class="w3-input w3-border" type="text">
-      </div>
-      <div class="w3-group">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text">
-      </div>
-      <div class="w3-group">
-        <label>Subject</label>
-        <input class="w3-input w3-border">
-      </div>
-      <button type="button" class="w3-btn w3-btn-block w3-padding-12 w3-dark-grey">Send</button>
-    </form><br>
-    <p>Powered by <a href="http://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-
-  </div>
-
-<!-- End page content -->
-</div>
-
-</body>
+  
+    </div>
+    
+    </body>
+    
 </html>
 
