edits before submit

--- a/storm_web/assignments/week2.html
+++ b/storm_web/assignments/week2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/w3.css">
      <link rel="stylesheet" href="../css/custom-w3.css"> 
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+     <!--This template comes from W3 Schools and was adapted to fit my new style. It can be found here under "Photo Template 3": http://www.w3schools.com/w3css/w3css_templates.asp -->
 </head>
 
 <body>    
