--- a/storm_web/assignments/week5.html
+++ b/storm_web/assignments/week5.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="../css/w3.css">
      <link rel="stylesheet" href="../css/custom-w3.css"> 
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+     <!--This template comes from W3 Schools and was adapted to fit my new style. It can be found here under "Photo Template 3": http://www.w3schools.com/w3css/w3css_templates.asp -->
 </head>
 
 <body>    
 
 <header class="w3-display-container w3-content" style="max-width:1500px">
   <img class="w3-image" src="../assignments/images/LAYOUT.png" alt="Me" width="1500" height="600">
-  <div class="w3-display-middle w3-padding-xlarge  w3-wide w3-text-BLACK w3-center">
+  <div class="w3-display-middle w3-padding-xlarge  w3-wide w3-text-brown w3-center">
     <h1 class="w3-hide-medium w3-hide-small name alltop">LAYOUT</h1>
     <h5 class="w3-hide-large alltop" style="white-space:nowrap">RYAN CENICOLA</h5>
     <h4 class="w3-hide-medium w3-hide-small">the good, the bad, and the ugly</h4>
