--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/w3.css">
      <link rel="stylesheet" href="css/custom-w3.css"> 
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+     <!--This template comes from W3 Schools and was adapted to fit my new style. It can be found here under "Photo Template 3": http://www.w3schools.com/w3css/w3css_templates.asp -->
 </head>
 
 <body>    
@@ -26,10 +27,10 @@
     <li><a href="http://storm.usc.edu/~cenicola/iml300/about.html">About Me</a></li>
     <li class="w3-dropdown-hover">
       <a href="#">Assignments <i class="fa fa-caret-down"></i></a>
-      <div class="w3-dropdown-content w3-white w3-card-4">
-        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography//Week 2</a>
+      <div class="w3-dropdown-content w3-red w3-card-4">
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography | Week 2</a>
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/constitution.html">Constitution</a>
-        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout//Week 2</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout | Week 2</a>
      <li><a href="http://storm.usc.edu/~cenicola/iml300/links.html">Top Links</a></li>
   </ul>
    
@@ -51,6 +52,8 @@
 
 <!-- Welcome Phrase -->
 <h3 class="w3-container w3-center intro">Here's what I've been up to.</h3>
+
+<p class="w3-container w3-center goals "> Welcome to my midterm website. My goal for this home page is to eventually have all of the current projects I am working on listed here. Maybe a joke or two as well. Who knows.  </p>
 
 <!-- Page content -->
 <div class="w3-content w3-row-padding w3-margin-top" id="portfolio">
