--- a/storm_web copy/index.html
+++ b/storm_web copy/index.html
@@ -24,7 +24,12 @@
   <!-- Navbar (placed at the bottom of the header image) -->
   <ul class="w3-navbar w3-red w3-round w3-display-bottommiddle w3-hide-small navbar" style="bottom:-16px">
     <li><a href="http://storm.usc.edu/~cenicola/iml300/about.html">About Me</a></li>
-    <li><a href="http://storm.usc.edu/~cenicola/iml300/assignments/index.html">Assignments</a></li>
+    <li class="w3-dropdown-hover">
+      <a href="#">Assignments <i class="fa fa-caret-down"></i></a>
+      <div class="w3-dropdown-content w3-white w3-card-4">
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography//Week 2</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/constitution.html">Constitution</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout//Week 2</a>
      <li><a href="http://storm.usc.edu/~cenicola/iml300/links.html">Top Links</a></li>
   </ul>
    
@@ -33,13 +38,13 @@
 
 <!-- Navbar on small screens -->
 <ul class="w3-navbar w3-red w3-hide-large w3-hide-medium">
-  <li><a href="#">About</a></li>
+  <li><a href="http://storm.usc.edu/~cenicola/iml300/about.html">About Me</a></li>
     <li class="w3-dropdown-hover">
       <a href="#">Assignments <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content w3-white w3-card-4">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography//Week 2</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/constitution.html">Constitution</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout//Week 2</a>
       </div>
     </li>
 </ul>
