--- a/storm_web/about.html
+++ b/storm_web/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/w3.css">
      <link rel="stylesheet" href="css/custom-w3.css"> 
      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+     <!--This template comes from W3 Schools and was adapted to fit my new style. It can be found here under "Photo Template 3": http://www.w3schools.com/w3css/w3css_templates.asp -->
 </head>
 
 <body>    
@@ -19,7 +20,7 @@
     <h5 class="w3-hide-large abouttop" style="white-space:nowrap">RYAN CENICOLA</h5>
     <h4 class="w3-hide-medium w3-hide-small">a briefing</h4>
   </div>
-   <span style="font-family:raleway">
+   <span class="w3-container" style="font-family:raleway">
     <h2 style="color:red;font-family:raleway"">Ryan Cenicola</h2>
        <hr>
     <h3 style="font-family:raleway"> About Me</h3>
