--- a/storm_web/links.html
+++ b/storm_web/links.html
@@ -22,6 +22,7 @@
   </div>
 
 <h3 class="w3-container w3-center intro">My favorite websites.</h3>
+<h5 class="w3-container w3-center intro">Click on the icons to access the websites. </h5>
 
 
 <div class="w3-container">
