--- a/storm_web/index.html
+++ b/storm_web/index.html
@@ -31,6 +31,8 @@
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography | Week 2</a>
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/constitution.html">Constitution</a>
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout | Week 2</a>
+          <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week6.html">Flowchart</a>
+        
      <li><a href="http://storm.usc.edu/~cenicola/iml300/links.html">Top Links</a></li>
   </ul>
    
@@ -46,6 +48,8 @@
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week2.html">Typography//Week 2</a>
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/constitution.html">Constitution</a>
         <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week5.html">Layout//Week 2</a>
+        <a href="http://storm.usc.edu/~cenicola/iml300/assignments/week6.html">Flowchart</a>
+        
       </div>
     </li>
 </ul>
